fix #1914 - text alignment in table headers was introduced by #1788 - AFAICT this way still solves plotly/dash-table#867

--- a/components/dash-table/src/dash-table/components/Table/Table.less
+++ b/components/dash-table/src/dash-table/components/Table/Table.less
@@ -707,7 +707,7 @@
             }
 
             .column-header-name {
-                margin-left: auto;
+                flex-grow: 1;
             }
 
             [class^='column-header--'], [class^='dash-filter--'] {
